added formatting on cards and images

--- a/index.html
+++ b/index.html
@@ -18,28 +18,26 @@
       </div>
     </div>
 
-    <div class="row">
-      <div id="divButtons"></div>
+    <div class="row justify-content-center">
+      <div id="divButtons" class="col-11"></div>
     </div>
 
-    <div class="row">
-      <form id="formCharacter">
-        <label for="tbCharacter">Who is your favorite Character?</label>
-        <input type="text" id="tbCharacter"><br>
-
-        <!-- Button triggers new movie to be added -->
-        <input id="btnCharacterAdd" type="submit" value="Add Character">
-      </form>
+    <div class="row justify-content-center">
+      <div class="col-11 text-center">
+        <form id="formCharacter">
+          <input type="text" id="tbCharacter" placeholder="Enter Your Favorite Character" size="50vw" class="text-center">
+          <!-- Button triggers new movie to be added -->
+          <input id="btnCharacterAdd" type="submit" value="Add Character" class="btn btn-success">
+        </form>
+      </div>
     </div>
 
     <!-- Movies will get dumped Here -->
     <div class="row justify-content-center">
-      <div class="col-10">
+      <div class="col-11">
         <div id="divGifs" class="row justify-content-center">
-
         </div>
       </div>
-
     </div>
 
 
